Fix CSS syntax by adding missing space in padding
Se cambio el syntax del CSS anadiendo un ;

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,5 +8,6 @@ h1 {
 
 .producto {
     border: 1px solid #ddd;
-    padding: 10px margin: 10px;
+    padding: 10px ;
+    margin: 10px;
 }
